--- a/templates/partials/_alert.html
+++ b/templates/partials/_alert.html
@@ -3,6 +3,7 @@
 {% for message in messages %}
 <div class="container">
 <div id = "message" >
+    <ul class="alert alert-dismissible fade show">
     <div class="alert alert-{{message.tags}}" alert dismissable text-center role='alert'>
         
         <strong>
@@ -16,7 +17,23 @@
             <span aria-hidden='true'>&times;</span>
         </button>
     </div>
+    </ul>
 </div>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const messageContainer = document.getElementById('messages');
+        if (messageContainer) {
+            setTimeout(function() {
+                messageContainer.style.opacity = '0'; // Fade out
+                setTimeout(function() {
+                    messageContainer.remove(); // Remove from DOM
+                }, 1000); // Wait for fade out to complete
+            }, 10000); // Time in milliseconds (5 seconds)
+        }
+    });
+</script>
+
 {% endfor %}
 {% endif %}
