--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -128,7 +128,7 @@
                         <a class="dropdown-item" href={% url "index" %}>其他服務</a>
                     </div>
                 </div>
-                <a class="nav-item nav-link" href={% url "FAQ" %}>過往活動</a>
+                <a class="nav-item nav-link" href={% url "events" %}>過往活動</a>
                 <a class="nav-item nav-link" href={% url "about" %}>Blog</a>
                 <a class="nav-item nav-link" href={% url "contact" %}>聯絡我們</a>
 
