--- a/templates/events/create_event.html
+++ b/templates/events/create_event.html
@@ -51,6 +51,18 @@
                         <label for="{{ form.sequence.id_for_label }}" class="form-label">Sequence</label>
                         {{ form.sequence|add_class:"form-control" }}
                     </div>
+                    <div class="mb-3">
+                        <label for="{{ form.id.id_for_label }}" class="form-label">ID</label>
+                        {{ form.id|add_class:"form-control" }}
+                    </div>
+                    <div class="mb-3">
+                        <label for="{{ form.event.id_for_label }}" class="form-label">Event</label>
+                        {{ form.event|add_class:"form-control" }}
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" name="{{ form.delete.name }}" id="{{ form.delete.id_for_label }}" class="form-check-input">
+                        <label for="{{ form.delete.id_for_label }}" class="form-check-label">Delete</label>
+                    </div>
                 </div>
             {% endfor %}
         </div>
