--- a/templates/events/select_event.html
+++ b/templates/events/select_event.html
@@ -18,7 +18,7 @@
     <div class="list-group">
         {% for event in events %}
         <a href="{% url 'update_event' event.id %}" class="list-group-item list-group-item-action">
-            {{ event.title }} - {{ event.event_date }}
+            {{ event.event_date }} - {{ event.title }} 
         </a>
         {% empty %}
         <div class="alert alert-warning">No events available for update.</div>
