--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,17 +1,13 @@
- <!-- Footer -->
-  
- <footer id="main-footer" class="py-4 bg-primary text-white text-center">
-  <div class="container">
-      <div class="contact mb-3">
-          <h5>Contact Us</h5>
-          <p>
-              電郵: <a href="mailto:kinetictra@gmail.com" class="text-white">kinetictra@gmail.com</a><br>
-              電話: <a href="tel:+85293793473" class="text-white">+852 9379 3473</a>
-          </p>
-      </div>
+<!-- Footer -->
+<footer id="main-footer" class="py-4 bg-white">
+    <div class="contact mb-3 text-left"> <!-- Added text-left class -->
+        <h5>
+            電郵: <a href="mailto:kinetictra@gmail.com" class="text-dark">kinetictra@gmail.com</a><br>
+            電話: <a href="tel:+85293793473" class="text-dark">+852 9379 3473</a>
+        </h5>
+    </div>
 
-      <div class="copyright">
-          <p>&copy; <span class="year">2025</span> KineticTraining. All rights reserved.</p>
-      </div>
-  </div>
+    <div class="copyright text-center"> <!-- Added text-center class -->
+        <h6>&copy; <span class="year">2025</span> KineticTraining. All rights reserved.</h6>
+    </div>
 </footer>
