--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,9 +1,8 @@
 {% load static %}
 
 <style>
-    
     .navbar {
-        background-color: #ffffff;
+        background-color: #ffffff; /* Ensure navbar is not transparent */
         padding: 15px 30px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         transition: background-color 0.3s ease;
@@ -84,7 +83,6 @@
         z-index: 1000; /* Ensure it is on top */
     }
 
-
     .social-icons {
         display: flex; /* Align items in a row */
         align-items: center; /* Center vertically */
@@ -101,96 +99,83 @@
     .social-logo:hover {
         transform: scale(1.1) rotateY(10deg); /* 3D effect on hover */
     }
-
-
 </style>
 
 <nav class="navbar navbar-expand-lg sticky-top">
-    <div class="container">
-        <div class="navbar-image">
-            <a href={% url "index" %}>
-                <img src={% static "img/logo2.png" %} alt="Kinetic Logo">
-            </a>
-        </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon">
-                <div></div>
-            </span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="navbar-nav ml-auto"> <!-- Add ml-auto here -->
+    <div class="navbar-image">
+        <a href={% url "index" %}>
+            <img src={% static "img/logo2.png" %} alt="Kinetic Logo">
+        </a>
+    </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon">
+            <div></div>
+        </span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="navbar-nav ml-auto"> <!-- Add ml-auto here -->
 
-                <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href={% url 'index' %} id="homeDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        首頁 <i class="fas fa-chevron-right"></i>
-                    </a>
-                
-                    <div class="dropdown-menu" aria-labelledby="homeDropdown">
-                        <a class="dropdown-item" href="{% url "values_education" %}">價值觀教育</a>
-                    </div>
+            <div class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href={% url 'index' %} id="homeDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    首頁
+                </a>
+                <div class="dropdown-menu" aria-labelledby="homeDropdown">
+                    <a class="dropdown-item" href="{% url "values_education" %}">價值觀教育</a>
                 </div>
+            </div>
 
-
-                <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        活動一覽 <i class="fas fa-chevron-right"></i>
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">領袖訓練</a>
-                        <a class="dropdown-item" href="#">團隊建立</a>
-                        <a class="dropdown-item" href="#">特殊教育</a>
-                        <a class="dropdown-item" href="#">個別訓練</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href={% url "index" %}>其他服務</a>
-                    </div>
+            <div class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    活動一覽
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">領袖訓練</a>
+                    <a class="dropdown-item" href="#">團隊建立</a>
+                    <a class="dropdown-item" href="#">特殊教育</a>
+                    <a class="dropdown-item" href="#">個別訓練</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href={% url "index" %}>其他服務</a>
                 </div>
-                <a class="nav-item nav-link" href={% url "events" %}>過往活動</a>
-                <a class="nav-item nav-link" href={% url "about" %}>Blog</a>
-                <a class="nav-item nav-link" href={% url "contact" %}>聯絡我們</a>
+            </div>
+            <a class="nav-item nav-link" href={% url "events" %}>過往活動</a>
+            <a class="nav-item nav-link" href={% url "about" %}>Blog</a>
+            <a class="nav-item nav-link" href={% url "contact" %}>聯絡我們</a>
 
-                <ul class="navbar-nav">
-                    <!-- if login then show dashboard and logout link -->
+            <ul class="navbar-nav">
+                {% if user.is_authenticated %}
+                <li {% if 'dashboard' in request.path %} class='nav-item active' 
+                {% else %} class='nav-item' {% endif %}>
+                <a class="nav-link" href={% url 'dashboard' %}>Welcome {{user.username}} (dashboard)</a>
+                </li> 
+                <li class='nav-item'>
+                  <a href="javascript:{document.getElementById('logout').submit()}" class='nav-link'>
+                  <i class='fas fa-sign-out-alt'></i> Logout   
+                  </a>
+                  <form action="{% url 'logout' %}" method="POST" id="logout">
+                    {% csrf_token %}
+                    <input type='hidden'/>
+                  </form>
+                </li>   
+                {% else %}
+                <li {% if 'login' in request.path %}
+               class="nav-item active" 
+                {% else %}
+                 class="nav-item " {% endif %}>
+                  <a class="nav-link" href={% url "login" %}>
+                    <i class="fas fa-sign-in-alt"></i>
+                    Login</a
+                  >
+                </li>
+                {% endif %}
+            </ul>
 
-                    <!------------->
-                    {% if user.is_authenticated %}
-                    <!--dashboard link-->
-                    <li {% if 'dashboard' in request.path %} class='nav-item active' 
-                    {% else %} class='nav-item' {% endif %}>
-                    <a class="nav-link" href={% url 'dashboard' %} >Welcome {{user.username}} (dashboard)</a>
-                    </li> 
-                    <!--logout link -->
-                    <li class='nav-item'>
-                      <a href="javascript:{document.getElementById('logout').submit()}" class='nav-link'>
-                      <i class='fas fa-sign-out-alt'></i> Logout   
-                      </a>
-                      <form action="{% url 'logout' %}" method="POST" id="logout">
-                        {% csrf_token %}
-                        <input type='hidden'/>
-                      </form>
-                    </li>   
-                    {% else %}
-                  <!-- this is login link -->
-                    <li   {% if 'login' in request.path %}
-                   class="nav-item active" 
-                    {% else %}
-                     class="nav-item " {% endif %}>
-                      <a class="nav-link" href={% url "login" %}>
-                        <i class="fas fa-sign-in-alt"></i>
-                        Login</a
-                      >
-                    </li>
-                  {% endif %}
-                    </ul>
-
-                <!-- Social Media Icons -->
-                <div class="social-icons">
-                    <a href="https://www.instagram.com/kinetic_radio" target="_blank" class="nav-item nav-link">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo" class="social-logo">
-                    </a>
-                    <a href="https://www.facebook.com/profile.php?id=61569644221657&mibextid=ZbWKwL" target="_blank" class="nav-item nav-link">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook Logo" class="social-logo">
-                    </a>
-                </div>
+            <div class="social-icons">
+                <a href="https://www.instagram.com/kinetic_radio" target="_blank" class="nav-item nav-link">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo" class="social-logo">
+                </a>
+                <a href="https://www.facebook.com/profile.php?id=61569644221657&mibextid=ZbWKwL" target="_blank" class="nav-item nav-link">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook Logo" class="social-logo">
+                </a>
             </div>
         </div>
     </div>
